--- a/views/_booking_management_header.erb
+++ b/views/_booking_management_header.erb
@@ -51,6 +51,14 @@
             </div>
           </div>
       <% end %>
+      <% if @addon_sales_channels %>
+        <div class="element_template">
+          <div class="entity-field">
+            <span class="entity-fieldlabel less_contrast_text">Canal de venta</span>
+            <span class="entity-fieldvalue"><%%= entity.sales_channel_code %></span>
+          </div>
+        </div>
+      <% end %>
     </div>
 
     <div class="grid_5">
