--- a/views/booking_activities_management.erb
+++ b/views/booking_activities_management.erb
@@ -113,10 +113,10 @@
          <%%= entity.stock_control ? '<i class="fa fa-times"></i>' : '' %>
       </td-->
       <td class="table-cell element-navigation-detail centered_text" rel="<%%= index %>" style="vertical-align: middle">
-         <%%= entity.active ? '<i class="fa fa-times"></i>' : '' %>
+         <%%= entity.active ? '<i class="fa fa-check"></i>' : '<i class="fa fa-times"></i>' %>
       </td>
       <td class="table-cell element-navigation-detail centered_text" rel="<%%= index %>" style="vertical-align: middle">
-         <%%= entity.web_public ? '<i class="fa fa-times"></i>' : ''  %>
+         <%%= entity.web_public ? '<i class="fa fa-check"></i>' : '<i class="fa fa-times"></i>'  %>
       </td>
       <td class="table-cell">
       </td>
