--- a/views/booking_activities_management.erb
+++ b/views/booking_activities_management.erb
@@ -28,6 +28,7 @@
      <div class="form-row">
        <input type="text" name="search" class="search-entity-input form-control"
               maxlength="60" size="20" placeholder="<%=t.entitymanagement.search%>"/>
+       <button class="btn btn-primary search-entity-button" type="button"><i class="si si-magnifier"></i></button>              
        <select name="active" class="search-entity-control form-control">
          <option value="only"><%=t.booking_activity_management.form.active_filter.only%></option>
          <option value="all"><%=t.booking_activity_management.form.active_filter.all%></option>
