--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -1,4 +1,4 @@
-<%= include('entity-management', {:elements_actions => elements_actions}) %>
+<%= include('entity-management') %>
 
 <!-- Renders the element description -->
 
@@ -16,6 +16,7 @@
      <div class="form-row">
        <input type="text" name="search" class="search-entity-input form-control"
               maxlength="60" size="20" placeholder="<%=t.entitymanagement.search%>"/>
+       <button class="btn btn-primary search-entity-button" type="button"><i class="si si-magnifier"></i></button>
        <select name="status" class="search-entity-control form-control">
          <option value="all">Todas</option>
          <option value="pending"><%=t.booking_console.report_pending_confirmation%>&nbsp;(<%=@pending_confirmation_reservations%>)</option>
@@ -67,7 +68,9 @@
            <%%= entity.booking_lines[idx].item_id %> (<%%= entity.booking_lines[idx].quantity %> u.)<br>
            <%% } %>
          <% else %>
+           <%% if (entity.booking_lines.length > 0) { %>
            <%%= entity.booking_lines[0].item_id %>
+           <%% } %>
          <% end %>
       </td>
       <td class="table-cell centered_text"><%%= self.formatDate(entity.date_from,'dd.MM.yyyy') %> </td>
@@ -104,10 +107,6 @@
      
      <div id="dialogs_container">
      </div> 
-
-     <%= partial :booking_management_header, locals: {booking_item_family: booking_item_family,
-                                                      multiple_rental_locations: multiple_rental_locations,
-                                                      driver_min_age_rules: driver_min_age_rules} %>
 
      <div class="container_12">
           <div class="grid_12">
