--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -109,8 +109,8 @@
      </div> 
 
      <%= partial :booking_management_header, locals: {booking_item_family: booking_item_family,
-                                                 -                                                      multiple_rental_locations: multiple_rental_locations,
-                                                 -                                                      driver_min_age_rules: driver_min_age_rules} %>
+                                                  multiple_rental_locations: multiple_rental_locations,
+                                                  driver_min_age_rules: driver_min_age_rules} %>
 -
 
      <div class="container_12">
